# python-password-manager

./: README.md  pyproject.toml
ospm/: __init__.py  __main__.py  apps.py  cli.py  config.py  vault.py
pypm/: __init__.py
