[project]
name = "ospm"
version = "0.1.0"
description = "Open Source password manager"
authors = [
    {name = "Anvarys",email = "105349498+Anvarys@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
packages = [{include = "ospm"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
