[project]
name = "ospm"
version = "0.1.0"
description = "Open Source password manager"
authors = [
    {name = "Anvarys",email = "105349498+Anvarys@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "clipboard (>=0.0.4,<0.0.5)"
]
packages = [{include = "ospm"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
ospm = "ospm.__main__:main"